--- a/Api/Glass.API.Backend/Mef.config
+++ b/Api/Glass.API.Backend/Mef.config
@@ -454,8 +454,14 @@
       </exports>
     </part>
 
-    <part type="Glass.Rentabilidade.Negocios.Componentes.RentabilidadeFluxo, Glass.Negocios.Componentes"  partCreationPolicy="Shared">
-      <importingConstructor useFirst="false" />
+    <part type="Glass.Rentabilidade.Negocios.Componentes.CalculadoraComissaoRentabilidade, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <exports>
+        <export contractName="" contractType="Glass.Rentabilidade.Negocios.ICalculadoraComissaoRentabilidade, Glass.Negocios" member="" />
+      </exports>
+    </part>
+
+    <part type="Glass.Rentabilidade.Negocios.Componentes.RentabilidadeFluxo, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <importingConstructor useFirst="true" />
       <exports>
         <export contractName="" contractType="Glass.Rentabilidade.Negocios.IRentabilidadeFluxo, Glass.Negocios" member="" />
         <export contractName="" contractType="Glass.Rentabilidade.IProvedorCalculadoraRentabilidade, Glass.Rentabilidade" member="" />
@@ -502,9 +508,92 @@
       </exports>
     </part>
 
+    <part type="Glass.Fiscal.Negocios.Componentes.CalculadoraRentabilidadeNotaFiscal, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractName="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade(Glass.Data.Model.NotaFiscal)"
+                contractType="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade`1[Glass.Data.Model.NotaFiscal, Glass.Data], Glass.Negocios" />
+        <export contractName="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade(Glass.Data.Model.ProdutosNf)"
+                contractType="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade`1[Glass.Data.Model.ProdutosNf, Glass.Data], Glass.Negocios" />
+        <export contractName="Glass.Data.ICalculadoraRentabilidade(Glass.Data.Model.NotaFiscal)"
+                contractType="Glass.Data.ICalculadoraRentabilidade`1[Glass.Data.Model.NotaFiscal, Glass.Data], Glass.Data" />
+        <export contractName="Glass.Data.ICalculadoraRentabilidade(Glass.Data.Model.ProdutosNf)"
+                contractType="Glass.Data.ICalculadoraRentabilidade`1[Glass.Data.Model.ProdutosNf, Glass.Data], Glass.Data" />
+      </exports>
+    </part>
+
+    <part type="Glass.Pedido.Negocios.Componentes.VerificadorRentabilidadeLiberacaoPedido, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractName="Glass.Data.IVerificadorRentabilidadeLiberacao(Glass.Data.Model.Pedido)"
+                contractType="Glass.Data.IVerificadorRentabilidadeLiberacao`1[Glass.Data.Model.Pedido, Glass.Data], Glass.Data" />
+      </exports>
+    </part>
+
+    <part type="Glass.Rentabilidade.Negocios.Componentes.VerificadorRentabilidadeLiberacao, Glass.Negocios.Componentes">
+      <exports>
+        <export contractType="Glass.Rentabilidade.Negocios.IVerificadorRentabilidadeLiberacao, Glass.Negocios" />
+      </exports>
+    </part>
+
     <part type="Glass.Otimizacao.Negocios.Componentes.OtimizacaoFluxo, Glass.Negocios.Componentes">
       <exports>
         <export contractType="Glass.Otimizacao.Negocios.IOtimizacaoFluxo, Glass.Negocios" />
+      </exports>
+    </part>
+
+    <part type="Glass.Fiscal.Negocios.Componentes.LocalizadorNaturezaOperacao, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <exports>
+        <export contractType="Glass.Fiscal.Negocios.ILocalizadorNaturezaOperacao, Glass.Negocios" />
+      </exports>
+    </part>
+
+    <part type="Glass.Fiscal.Negocios.Componentes.ProvedorIcmsProdutoUf, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <exports>
+        <export contractType="Glass.Fiscal.Negocios.Entidades.IProvedorIcmsProdutoUf, Glass.Negocios.Entidades" />
+      </exports>
+    </part>
+
+    <part type="Glass.Fiscal.Negocios.Componentes.ProvedorMvaProdutoUf, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <exports>
+        <export contractType="Glass.Fiscal.Negocios.Entidades.IProvedorMvaProdutoUf, Glass.Negocios.Entidades" />
+      </exports>
+    </part>
+
+    <part type="Glass.Fiscal.Negocios.Componentes.ProvedorCodValorFiscal, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <exports>
+        <export contractType="Glass.Fiscal.Negocios.IProvedorCodValorFiscal, Glass.Negocios" />
+      </exports>
+    </part>
+
+    <part type="Glass.Fiscal.Negocios.Componentes.CalculadoraImposto, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractType="Glass.Fiscal.Negocios.ICalculadoraImposto, Glass.Negocios" />
+      </exports>
+    </part>
+
+    <part type="Glass.Fiscal.Negocios.Componentes.Calculadoras.CalculadoraImpostoPedido, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractName="Glass.Data.ICalculadoraImposto(Glass.Data.Model.Pedido)"
+                contractType="Glass.Data.ICalculadoraImposto`1[Glass.Data.Model.Pedido, Glass.Data], Glass.Data" />
+      </exports>
+    </part>
+
+    <part type="Glass.Fiscal.Negocios.Componentes.Calculadoras.CalculadoraImpostoPedidoEspelho, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractName="Glass.Data.ICalculadoraImposto(Glass.Data.Model.PedidoEspelho)"
+                contractType="Glass.Data.ICalculadoraImposto`1[Glass.Data.Model.PedidoEspelho, Glass.Data], Glass.Data" />
+      </exports>
+    </part>
+
+    <part type="Glass.Fiscal.Negocios.Componentes.Calculadoras.CalculadoraImpostoNotaFiscal, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractName="Glass.Data.ICalculadoraImposto(Glass.Data.Model.NotaFiscal)"
+                contractType="Glass.Data.ICalculadoraImposto`1[Glass.Data.Model.NotaFiscal, Glass.Data], Glass.Data" />
       </exports>
     </part>
 
