--- a/Glass.Data/packages.config
+++ b/Glass.Data/packages.config
@@ -25,7 +25,7 @@
   <package id="MySqlBackup.NET" version="2.0.9.3" targetFramework="net40" requireReinstallation="true" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NReco.PdfGenerator" version="1.1.12.0" targetFramework="net40" />
-  <package id="PDFsharp" version="1.50.4000-beta3b" targetFramework="net40" />
+  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta007" targetFramework="net461" developmentDependency="true" />
 </packages>
