--- a/Glass/Web.Release.config
+++ b/Glass/Web.Release.config
@@ -13,16 +13,16 @@
       xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
   <system.webServer>
-    <httpCompression directory="%SystemDrive%\inetpub\temp\IIS Temporary Compressed Files" xdt:Transform="Replace">
-      <scheme name="gzip" dll="%Windir%\system32\inetsrv\gzip.dll" staticCompressionLevel="9" xdt:Transform="Replace" />
-      <dynamicTypes xdt:Transform="Replace">
+    <httpCompression directory="%SystemDrive%\inetpub\temp\IIS Temporary Compressed Files" xdt:Transform="Insert">
+      <scheme name="gzip" dll="%Windir%\system32\inetsrv\gzip.dll" staticCompressionLevel="9" />
+      <dynamicTypes>
         <add mimeType="text/*" enabled="true" />
         <add mimeType="message/*" enabled="true" />
         <add mimeType="application/x-javascript" enabled="true" />
         <add mimeType="application/json" enabled="true" />
         <add mimeType="*/*" enabled="false" />
       </dynamicTypes>
-      <staticTypes xdt:Transform="Replace">
+      <staticTypes>
         <add mimeType="text/*" enabled="true" />
         <add mimeType="message/*" enabled="true" />
         <add mimeType="application/x-javascript" enabled="true" />
@@ -31,6 +31,6 @@
         <add mimeType="*/*" enabled="false" />
       </staticTypes>
     </httpCompression>
-    <urlCompression doStaticCompression="true" doDynamicCompression="true" xdt:Transform="Replace" />
+    <urlCompression doStaticCompression="true" doDynamicCompression="true" xdt:Transform="Insert" />
   </system.webServer >
 </configuration>
