--- a/Glass.Data/app.config
+++ b/Glass.Data/app.config
@@ -487,28 +487,22 @@
             <setting name="Glass_Data_wsPNFeStatusServico_NFeStatusServico4" serializeAs="String">
                 <value>https://nfe.svrs.rs.gov.br/ws/NfeStatusServico/NfeStatusServico4.asmx</value>
             </setting>
-            <setting name="Glass_Data_wsNFeSVANAutorizacao_NFeAutorizacao4"
-                serializeAs="String">
+            <setting name="Glass_Data_wsNFeSVANAutorizacao_NFeAutorizacao4" serializeAs="String">
                 <value>https://www.sefazvirtual.fazenda.gov.br/NFeAutorizacao4/NFeAutorizacao4.asmx</value>
             </setting>
-            <setting name="Glass_Data_wsNFeSVANConsultaProtocolo_NFeConsultaProtocolo4"
-                serializeAs="String">
+            <setting name="Glass_Data_wsNFeSVANConsultaProtocolo_NFeConsultaProtocolo4" serializeAs="String">
                 <value>https://www.sefazvirtual.fazenda.gov.br/NFeConsultaProtocolo4/NFeConsultaProtocolo4.asmx</value>
             </setting>
-            <setting name="Glass_Data_wsNFeSVANInutilizacao_NFeInutilizacao4"
-                serializeAs="String">
+            <setting name="Glass_Data_wsNFeSVANInutilizacao_NFeInutilizacao4" serializeAs="String">
                 <value>https://www.sefazvirtual.fazenda.gov.br/NFeInutilizacao4/NFeInutilizacao4.asmx</value>
             </setting>
-            <setting name="Glass_Data_wsNFeSVANRecepcaoEvento_NFeRecepcaoEvento4"
-                serializeAs="String">
+            <setting name="Glass_Data_wsNFeSVANRecepcaoEvento_NFeRecepcaoEvento4" serializeAs="String">
                 <value>https://www.sefazvirtual.fazenda.gov.br/NFeRecepcaoEvento4/NFeRecepcaoEvento4.asmx</value>
             </setting>
-            <setting name="Glass_Data_wsNFeSVANRetAutorizacao_NFeRetAutorizacao4"
-                serializeAs="String">
+            <setting name="Glass_Data_wsNFeSVANRetAutorizacao_NFeRetAutorizacao4" serializeAs="String">
                 <value>https://www.sefazvirtual.fazenda.gov.br/NFeRetAutorizacao4/NFeRetAutorizacao4.asmx</value>
             </setting>
-            <setting name="Glass_Data_wsNFeSVANStatus_NFeStatusServico4"
-                serializeAs="String">
+            <setting name="Glass_Data_wsNFeSVANStatus_NFeStatusServico4" serializeAs="String">
                 <value>https://www.sefazvirtual.fazenda.gov.br/NFeStatusServico4/NFeStatusServico4.asmx</value>
             </setting>
         </Glass.Data.Properties.Settings>
