[DEV] #293 Finalização da extração do controle base de lista de produtos

--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -1077,7 +1077,7 @@
     <Content Include="Images\note_add.gif" />
     <Content Include="Images\numDown.gif" />
     <Content Include="Images\numUp.gif" />
-    <Content Include="Images\não curtir.gif" />
+    <Content Include="Images\nao curtir.gif" />
     <Content Include="Images\offline.gif" />
     <Content Include="Images\ok.gif" />
     <Content Include="Images\ok.wav" />
