--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -405,6 +405,7 @@
     <Compile Include="Models\Pedidos\ProdutosPedido\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\Pedidos\ProdutosPedido\CadastroAtualizacao\DadoRealECalculadoDto.cs" />
     <Compile Include="Models\Pedidos\ProdutosPedido\CadastroAtualizacao\ProdutoDto.cs" />
+    <Compile Include="Models\Pedidos\ProdutosPedido\Observacao\DadosEntradaDto.cs" />
     <Compile Include="Models\Processos\Filtro\ProcessoDto.cs" />
     <Compile Include="Models\Genericas\Venda\AlturaDto.cs" />
     <Compile Include="Models\Genericas\Venda\AreaDto.cs" />
