--- a/Api/Glass.API.Backend/Web.config
+++ b/Api/Glass.API.Backend/Web.config
@@ -4,8 +4,7 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings>
-    <add key="authorizedUris" value="http://localhost:15160" />
+  <appSettings file="AppSettings.config">
     <add key="consultaCep" value="1d17d99658a08b01647d890d71c509bb" />
   </appSettings>
   <system.web>
