[DEV] #340 Alteração no payload do método de cálculo de total de beneficiamentos para permitir o cálculo por dados do produto informado.
Além disso, diminui o tamanho do payload de entrada, evitando a repetição dos dados do produto por beneficiamento, informando-os apenas uma vez.

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -316,6 +316,7 @@
     <Compile Include="Helper\Respostas\MensagemDto.cs" />
     <Compile Include="Models\Beneficiamentos\Configuracoes\ControleDto.cs" />
     <Compile Include="Models\Beneficiamentos\Filtro\BeneficiamentoDto.cs" />
+    <Compile Include="Models\Beneficiamentos\Total\DadosBeneficiamentosDto.cs" />
     <Compile Include="Models\Beneficiamentos\Total\DadosEntradaDto.cs" />
     <Compile Include="Models\Beneficiamentos\Total\DadosCalculoDto.cs" />
     <Compile Include="Models\Beneficiamentos\Total\TotalDto.cs" />
