[DEV] #340 Correção no cálculo do total dos beneficiamentos.
Inclui alteração no controle de laminados para exibir as colunas com valores e permitir inserir produtos quando não for vidro laminado (ou seja, quando for vidro duplo).

--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -265,6 +265,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Beneficiamentos\Total\Dto\PrecoBeneficiamentoDto.cs" />
     <Compile Include="Beneficiamentos\Total\Dto\BeneficiamentoDto.cs" />
     <Compile Include="Beneficiamentos\Total\Dto\DadosCalculoDto.cs" />
     <Compile Include="Beneficiamentos\Total\Dto\DadosProdutoDto.cs" />
@@ -277,6 +278,7 @@
     <Compile Include="Beneficiamentos\Total\Estrategia\QuantidadeStrategy.cs" />
     <Compile Include="Beneficiamentos\Total\Estrategia\SemAlteracaoStrategy.cs" />
     <Compile Include="Beneficiamentos\Total\Estrategia\ValorTotalStrategyFactory.cs" />
+    <Compile Include="Beneficiamentos\Total\SelecionaPrecoBeneficiamento.cs" />
     <Compile Include="Beneficiamentos\ValorTotal.cs" />
     <Compile Include="Carregamento\DAL\ItemCarregamentoDAO.cs" />
     <Compile Include="Carregamento\DAL\OrdemCargaDAO.cs" />
