--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -329,6 +329,7 @@
     <Compile Include="Models\Genericas\CidadeDto.cs" />
     <Compile Include="Models\Genericas\EnderecoDto.cs" />
     <Compile Include="Models\Genericas\IdDto.cs" />
+    <Compile Include="Models\Genericas\Venda\ComposicaoDto.cs" />
     <Compile Include="Models\Genericas\Venda\ItemDto.cs" />
     <Compile Include="Models\Pedidos\ProdutosPedido\Lista\PermissoesDto.cs" />
     <Compile Include="Models\Obras\Filtro\DadosEntradaDto.cs" />
@@ -508,7 +509,7 @@
   </ItemGroup>
   <ItemGroup>
     <AdditionalFiles Include="..\..\stylecop.json" />
-    <None Include="..\..\.editorconfig" />
+    <AdditionalFiles Include="..\..\.editorconfig" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\..\packages\StyleCop.Analyzers.1.1.0-beta007\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
