--- a/Mathematical/Glass.Mathematical/Glass.Mathematical.csproj
+++ b/Mathematical/Glass.Mathematical/Glass.Mathematical.csproj
@@ -75,6 +75,8 @@
     <AdditionalFiles Include="..\..\stylecop.json">
       <Link>stylecop.json</Link>
     </AdditionalFiles>
+  </ItemGroup>
+  <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
