--- a/Otimizacao/Glass.Otimizacao/Glass.Otimizacao.csproj
+++ b/Otimizacao/Glass.Otimizacao/Glass.Otimizacao.csproj
@@ -61,6 +61,8 @@
     <AdditionalFiles Include="..\..\stylecop.json">
       <Link>stylecop.json</Link>
     </AdditionalFiles>
+  </ItemGroup>
+  <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
