--- a/Rentabilidade/Glass.Rentabilidade.Test/Glass.Rentabilidade.Test.csproj
+++ b/Rentabilidade/Glass.Rentabilidade.Test/Glass.Rentabilidade.Test.csproj
@@ -89,6 +89,8 @@
     <AdditionalFiles Include="..\..\stylecop.json">
       <Link>stylecop.json</Link>
     </AdditionalFiles>
+  </ItemGroup>
+  <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
