#77191 Alteração no protcolo de comunicação com o eCutter

--- a/Glass/Mef.config
+++ b/Glass/Mef.config
@@ -541,6 +541,13 @@
         <export contractType="Glass.Otimizacao.Negocios.IOtimizacaoFluxo, Glass.Negocios" />
       </exports>
     </part>
+
+    <part type="Glass.Otimizacao.Negocios.Componentes.AutenticadorProtocolo, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <importingConstructor useFirst="false" />
+      <exports>
+        <export contractType="Glass.Otimizacao.eCutter.IAutenticadorProtocolo, Glass.Otimizacao" />
+      </exports>
+    </part>
     
     <part type="Glass.Fiscal.Negocios.Componentes.LocalizadorNaturezaOperacao, Glass.Negocios.Componentes" partCreationPolicy="Shared">
       <exports>
