--- a/Negocios/Glass.Negocios.Componentes/Glass.Negocios.Componentes.csproj
+++ b/Negocios/Glass.Negocios.Componentes/Glass.Negocios.Componentes.csproj
@@ -304,6 +304,7 @@
     <Compile Include="Global\VeiculoFluxo.cs" />
     <Compile Include="Instalacao\InstalacaoFluxo.cs" />
     <Compile Include="ObtemDescritorEntidade.cs" />
+    <Compile Include="Otimizacao\AutenticadorProtocolo.cs" />
     <Compile Include="Otimizacao\EntradaEstoqueChapa.cs" />
     <Compile Include="Otimizacao\EstoqueChapa.cs" />
     <Compile Include="Otimizacao\Material.cs" />
