--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -745,6 +745,7 @@
     <Compile Include="Orcamento\Model\AmbienteOrcamentoRentabilidade.cs" />
     <Compile Include="Orcamento\Model\OrcamentoRentabilidade.cs" />
     <Compile Include="Orcamento\Model\ProdutoOrcamentoRentabilidade.cs" />
+    <Compile Include="Otimizacao\Model\PlanoCorte.cs" />
     <Compile Include="PCP\DAL\AmbientePedidoEspelhoRentabilidadeDAO.cs" />
     <Compile Include="PCP\DAL\ArquivoCalcEngineDAO.cs" />
     <Compile Include="PCP\DAL\ArquivoCalcEngineVariavelDAO.cs" />
