--- a/Otimizacao/Glass.Otimizacao/Glass.Otimizacao.csproj
+++ b/Otimizacao/Glass.Otimizacao/Glass.Otimizacao.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="eCutter\IAutenticadorProtocolo.cs" />
     <Compile Include="eCutter\MensagemTransacao.cs" />
     <Compile Include="eCutter\ProtocolConfiguration.cs" />
     <Compile Include="eCutter\ResultadoSalvarTransacao.cs" />
