--- a/Otimizacao/Glass.Otimizacao/Glass.Otimizacao.csproj
+++ b/Otimizacao/Glass.Otimizacao/Glass.Otimizacao.csproj
@@ -44,12 +44,16 @@
     <Compile Include="eCutter\ProtocolConfiguration.cs" />
     <Compile Include="eCutter\ResultadoSalvarTransacao.cs" />
     <Compile Include="eCutter\Serializador.cs" />
+    <Compile Include="IArquivoSolucaoOtimizacao.cs" />
     <Compile Include="IEntradaEstoqueChapa.cs" />
     <Compile Include="IEstoqueChapa.cs" />
     <Compile Include="IMaterial.cs" />
     <Compile Include="IPecaPadrao.cs" />
+    <Compile Include="IRepositorioSolucaoOtimizacao.cs" />
     <Compile Include="ISessaoOtimizacao.cs" />
+    <Compile Include="ISolucaoOtimizacao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositorioSolucaoOtimizacao.cs" />
     <Compile Include="TipoCorteTransversal.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
