--- a/Glass.Data/Properties/Settings.settings
+++ b/Glass.Data/Properties/Settings.settings
@@ -500,5 +500,8 @@
     <Setting Name="Glass_Data_wsNFeSVANStatus_NFeStatusServico4" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">https://www.sefazvirtual.fazenda.gov.br/NFeStatusServico4/NFeStatusServico4.asmx</Value>
     </Setting>
+    <Setting Name="Glass_Data_wsPNFeConsultaCadastro2_CadConsultaCadastro2" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://nfe.sefaz.pe.gov.br/nfe-service/services/CadConsultaCadastro2</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
