--- a/Otimizacao/Glass.Otimizacao/Glass.Otimizacao.csproj
+++ b/Otimizacao/Glass.Otimizacao/Glass.Otimizacao.csproj
@@ -39,11 +39,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="eCutter\DocumentoEtiquetas.cs" />
+    <Compile Include="eCutter\Etiqueta.cs" />
+    <Compile Include="eCutter\EtiquetaPeca.cs" />
+    <Compile Include="eCutter\EtiquetaPlanoCorte.cs" />
+    <Compile Include="eCutter\EtiquetaRetalho.cs" />
     <Compile Include="eCutter\IAutenticadorProtocolo.cs" />
     <Compile Include="eCutter\MensagemTransacao.cs" />
+    <Compile Include="eCutter\EtiquetaPlanoOtimizacao.cs" />
     <Compile Include="eCutter\ProtocolConfiguration.cs" />
     <Compile Include="eCutter\ResultadoSalvarTransacao.cs" />
     <Compile Include="eCutter\Serializador.cs" />
+    <Compile Include="eCutter\TipoEtiqueta.cs" />
     <Compile Include="IArquivoSolucaoOtimizacao.cs" />
     <Compile Include="IEntradaEstoqueChapa.cs" />
     <Compile Include="IEstoqueChapa.cs" />
