#77191 Inclusão da configuração do tipo de estoque de chapa para a otimização

--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -329,6 +329,7 @@
     <Compile Include="Configuracoes\OrcamentoConfig\TelaCadastro.cs" />
     <Compile Include="Configuracoes\OrcamentoConfig\TelaCadastroProdutoOrcamento.cs" />
     <Compile Include="Configuracoes\OrdemCargaConfig\OrdemCargaConfig.cs" />
+    <Compile Include="Configuracoes\OtimizacaoConfig\OtimizacaoConfig.cs" />
     <Compile Include="Configuracoes\PCPConfig\EmailSMS.cs" />
     <Compile Include="Configuracoes\PCPConfig\Etiqueta.cs" />
     <Compile Include="Configuracoes\PCPConfig\PainelProducao.cs" />
