--- a/Glass/packages.config
+++ b/Glass/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CalcEngine" version="1.9.59" targetFramework="net40" />
-  <package id="CalcEngine.Biesse" version="1.9.59" targetFramework="net40" />
+  <package id="CalcEngine" version="1.9.81" targetFramework="net40" />
+  <package id="CalcEngine.Biesse" version="1.9.81" targetFramework="net40" />
   <package id="CalcEngine.Drawing" version="1.7.2.232" targetFramework="net40" />
-  <package id="CalcEngine.Dxf" version="1.9.59" targetFramework="net40" />
-  <package id="CalcEngine.Forvet" version="1.9.59" targetFramework="net40" />
-  <package id="CalcEngine.Optima" version="1.9.59" targetFramework="net40" />
-  <package id="CalcEngine.SGlass" version="1.9.59" targetFramework="net40" />
+  <package id="CalcEngine.Dxf" version="1.9.81" targetFramework="net40" />
+  <package id="CalcEngine.Dynamics" version="1.0.0" targetFramework="net40" />
+  <package id="CalcEngine.Forvet" version="1.9.81" targetFramework="net40" />
+  <package id="CalcEngine.Optima" version="1.9.81" targetFramework="net40" />
+  <package id="CalcEngine.SGlass" version="1.9.81" targetFramework="net40" />
   <package id="CalcEngine.Text" version="1.7.2.232" targetFramework="net40" />
   <package id="Colosoft.Business" version="1.0.0" targetFramework="net40" />
   <package id="Colosoft.Caching" version="1.0.0" targetFramework="net40" />
